--- a/Complain-System/public/template/assets/css/parents/NewStyle.css
+++ b/Complain-System/public/template/assets/css/parents/NewStyle.css
@@ -5,7 +5,7 @@
     height: 100vh;
     /* display: flex;
     align-items: center; */
-    /* background: #4b79a1; 
+    /* background: #4b79a1;
     background: -webkit-linear-gradient(to right, #4b79a1, #283e51);
     background: linear-gradient(to right, #4b79a1, #283e51); */
     width:100%;
@@ -21,10 +21,11 @@
   .hero-content h1 {
     font-size: 3rem;
     margin-bottom: 2rem;
+    color: rgb(62, 56, 50);
   }
 
   .hero-content p {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin-bottom: 1rem;
   }
 
@@ -34,7 +35,7 @@
     margin-bottom: 2rem;
     text-align: left;
   }
-  
+
 
   .hero-content ul li:before {
     content: "\2022";
