--- a/Complain-System/public/template/assets/css/form/main.css
+++ b/Complain-System/public/template/assets/css/form/main.css
@@ -185,6 +185,11 @@ iframe {
     height: 50%;
     width:100%;
 }
+
+.contact1-form-AddMod{
+    height: 581px;
+    width: 390px;
+}
 .contact1-form-teacher{
     height: 531px;
     width: 390px;
