--- a/Complain-System/public/template/assets/css/LoginSignUp/LoginSignUp.css
+++ b/Complain-System/public/template/assets/css/LoginSignUp/LoginSignUp.css
@@ -206,6 +206,11 @@ background: transparent; }
     .fa-eye {
         cursor: pointer;
     }
+    .errorMessage{
+        font-size:18px;
+        color: #ff0000;
+    }
+
 	.error-message {
 
         display: none;
@@ -224,11 +229,6 @@ background: transparent; }
     margin: 0 auto;
     box-shadow: 100px 100px 150px #decece,
     -15px -15px 40px #ffffff;
-    /* box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-    -webkit-box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-    -o-box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-    -ms-box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05); */
     border-radius: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -460,32 +460,7 @@ background: transparent; }
   .label-has-error {
     top: 22%; }
 
-  label.error {
-    position: relative;
-    background: url("../images/unchecked.gif") no-repeat;
-    background-position-y: 3px;
-    padding-left: 20px;
-    display: block;
-    margin-top: 20px; }
 
-  label.valid {
-    display: block;
-    position: absolute;
-    right: 0;
-    left: auto;
-    margin-top: -6px;
-    width: 20px;
-    height: 20px;
-    background: transparent; }
-    label.valid:after {
-      font-family: 'Material-Design-Iconic-Font';
-      content: '\f269';
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      /* right: 0; */
-      font-size: 16px;
-      color: green; }
 
   .label-agree-term {
     position: relative;
@@ -496,64 +471,13 @@ background: transparent; }
     -o-transform: translateY(0);
     -ms-transform: translateY(0); }
 
-  .material-icons-name {
-    font-size: 18px; }
 
   .signin-content {
     padding-top: 67px;
     padding-bottom: 87px; }
 
-  .social-login {
-    align-items: center;
-    -moz-align-items: center;
-    -webkit-align-items: center;
-    -o-align-items: center;
-    -ms-align-items: center;
-    margin-top: 80px; }
 
-  .social-label {
-    display: inline-block;
-    margin-right: 15px; }
 
-  .socials li {
-    padding: 5px; }
-    .socials li:last-child {
-      margin-right: 0px; }
-    .socials li a {
-      text-decoration: none; }
-      .socials li a i {
-        width: 30px;
-        height: 30px;
-        color: #fff;
-        font-size: 14px;
-        border-radius: 5px;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -o-border-radius: 5px;
-        -ms-border-radius: 5px;
-        transform: translateZ(0);
-        -moz-transform: translateZ(0);
-        -webkit-transform: translateZ(0);
-        -o-transform: translateZ(0);
-        -ms-transform: translateZ(0);
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -webkit-transition-property: transform;
-        transition-property: transform;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out; }
-    .socials li:hover a i {
-      -webkit-transform: scale(1.3) translateZ(0);
-      transform: scale(1.3) translateZ(0); }
-
-  .zmdi-facebook {
-    background: #3b5998; }
-
-  .zmdi-twitter {
-    background: #1da0f2; }
-
-  .zmdi-google {
-    background: #e72734; }
 
   .signin-form {
     margin-right: 90px;
